# pinchy

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  dev.sh  pinchy.service
.github/workflows/: ci.yml
scripts/: migrate-jsonl-to-sqlite.sh  pinchy-update.sh  pre-commit
skills/global/browser/: SKILL.md  skill.yaml
src/: lib.rs  logs.rs  main.rs  utils.rs
src/agent/: debug.rs  dispatch.rs  mod.rs  persist.rs  tool_exec.rs  tool_loop.rs  turn.rs  types.rs
src/auth/: copilot_token.rs  github_device.rs  mod.rs
src/cli/: backup.rs  mod.rs  service.rs
src/cli/default_templates/: HEARTBEAT.md  SOUL.md  TOOLS.md
src/comm/: mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/discord/: mod.rs
src/gateway/: auth.rs  mod.rs  ws.rs
src/gateway/handlers/: agents.rs  config.rs  cron.rs  debug.rs  health.rs  heartbeat.rs  memory.rs  mod.rs  models.rs  receipts.rs  sessions.rs  skills.rs  slash_cmds.rs  usage.rs  webhook.rs
src/memory/: mod.rs
src/models/: azure_openai.rs  copilot.rs  mod.rs  openai.rs  openai_compat.rs  pricing.rs
src/scheduler/: mod.rs
src/secrets/: mod.rs
src/session/: index.rs  mod.rs
src/skills/: defaults.rs  mod.rs
src/skills/default_skills/: browser.md
src/slash/: mod.rs
src/store/: mod.rs
src/tools/: memory_tool.rs  mod.rs  parsing.rs  skill_author_tool.rs
src/tools/builtins/: agent.rs  apply_patch.rs  browser.rs  browser_service.rs  cron.rs  delegate.rs  edit_file.rs  exec_shell.rs  list_files.rs  mcp.rs  memory.rs  mod.rs  read_file.rs  search_tools.rs  self_update.rs  send_message.rs  session.rs  skill_author.rs  write_file.rs
src/utils/: browser_detect.rs  mod.rs
src/watcher/: mod.rs
static/: api.js  app.css  app.js  index.html
static/views/: agents.js  chat.js  config.js  cron.js  dashboard.js  logs.js  sessions.js  skills.js
templates/: config.yaml
templates/agent/: TOOLS.md
tests/: api_endpoints.rs  config_load.rs  copilot_function_calling.rs  enforcement_retry.rs  gateway_basic.rs  gateway_publish.rs  integration_playwright.rs  mcp_rmcp_smoke.rs  provider_manager.rs  scheduler_advanced.rs  scheduler_basic.rs  session_store.rs  skill_registry.rs  skills_api.rs  slash_new_session.rs  slash_scheduler.rs  tool_fence_extract.rs  tool_loop_integration.rs  tools.rs  tools_meta.rs  tools_sandbox.rs  ui_gateway.rs
web/: DESIGN_PLAN.md  GAP_ANALYSIS.md  README.md  _patch.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/api/: client.ts
web/src/app/: router.tsx
web/src/components/: SessionSidebar.tsx  ui.tsx
web/src/lib/: http.ts  utils.ts  ws.ts
web/src/routes/: agents.tsx  chat.tsx  config.tsx  cron-edit.tsx  cron.tsx  dashboard.tsx  logs.tsx  sessions.tsx  skills.tsx
web/src/state/: ui.ts
web/src/styles/: global.css
