[package]
name = "mini_claw"
version = "0.1.0"
edition = "2021"
description = "Lightweight Rust agent platform for Raspberry Pi"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-core = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
clap = { version = "4", features = ["derive"] }
serenity = { version = "0.12", features = ["client", "gateway", "model"] }
tokio-cron-scheduler = "0.13"
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.6", features = ["fs"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
copilot-sdk = { git = "https://github.com/copilot-community-sdk/copilot-sdk-rust" }
keyring = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
url = "2"
dialoguer = "0.10"
rpassword = "7.4.0"
tiktoken-rs = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-util = "0.7"
ring = "0.17"
base64 = "0.22"
playwright-rust = { git = "https://github.com/padamson/playwright-rust", package = "playwright-rs", optional = true }

[features]
default = ["playwright"]
playwright = ["playwright-rust"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-tungstenite = "0.24"
futures-util = "0.3"
