[package]
name = "mini_claw"
version = "0.1.13"
edition = "2021"
description = "Lightweight Rust agent platform for Raspberry Pi"
license = "MIT"
repository = "https://github.com/dominic-codespoti/pinchy"
homepage = "https://github.com/dominic-codespoti/pinchy"
keywords = ["agent", "ai", "raspberry-pi", "discord", "copilot"]
categories = ["command-line-utilities"]
build = "build.rs"

[[bin]]
name = "pinchy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-core = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
clap = { version = "4", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "builder"] }
tokio-cron-scheduler = "0.13"
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.13"
copilot-sdk = { package = "copilot-sdk-supercharged", version = "1.0" }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["linux-native"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.10"
tiktoken-rs = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-util = { version = "0.7", default-features = false }
ring = "0.17"
base64 = "0.22"
libc = "0.2"
openssl = { version = "0.10", features = ["vendored"], optional = true }
rmcp = { version = "0.16", default-features = false, features = ["client", "server", "transport-streamable-http-client-reqwest", "reqwest"] }
playwright-rs = "0.8"
schemars = "0.8"
notify-debouncer-mini = "0.5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[features]
default = ["playwright"]
vendored-openssl = ["openssl"]
playwright = []

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
